[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/kings_and_pigs/03-Pig/Idle (34x28).png" type="Texture" id=1]
[ext_resource path="res://scripts/Pig.gd" type="Script" id=2]
[ext_resource path="res://scripts/utils/RandomAudioClipPlayer.gd" type="Script" id=3]
[ext_resource path="res://assets/kings_and_pigs/03-Pig/Hit (34x28).png" type="Texture" id=4]
[ext_resource path="res://assets/Minifantasy_Dungeon_SFX/24_orc_death_spin.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/kings_and_pigs/03-Pig/Dead (34x28).png" type="Texture" id=6]
[ext_resource path="res://scripts/utils/StateMachine.gd" type="Script" id=7]
[ext_resource path="res://scripts/utils/AnimatedState.gd" type="Script" id=8]
[ext_resource path="res://assets/kings_and_pigs/03-Pig/Attack (34x28).png" type="Texture" id=9]
[ext_resource path="res://scripts/utils/AttackState.gd" type="Script" id=10]
[ext_resource path="res://scripts/Hitbox.gd" type="Script" id=11]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 170, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 204, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 238, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 272, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 306, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 340, 0, 34, 28 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "die",
"speed": 2.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=13]
radius = 20.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 17.0
height = 42.0

[node name="Pig" type="RigidBody2D"]
collision_layer = 4
mode = 2
gravity_scale = 7.0
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
animation = "idle"

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
animation = "die"

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
animation = "hit"

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
animation = "attack"
first_active_frame = 2
last_active_frame = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 12 )
animation = "idle"
frame = 8
playing = true
offset = Vector2( -3, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="OnHitSound" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 3 )
path_template = "res://assets/Minifantasy_Dungeon_SFX/21_orc_damage_%s.wav"
low_index = 1
high_index = 3

[node name="OnDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AttackSoundPlayer" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 3 )
path_template = "res://assets/Minifantasy_Dungeon_SFX/17_orc_atk_sword_%s.wav"
low_index = 1
high_index = 3

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -32, -19 )
rotation = -0.218166
shape = SubResource( 25 )

[connection signal="body_entered" from="Hitbox" to="Hitbox" method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="Hitbox" method="_on_Hitbox_body_exited"]
